<resources>
    <string name="app_name">BukiClient</string>
    <string name="default_welcome">Вітаємо!</string>
    <string name="pib_label">ПІБ:</string>
    <string name="no_data_message">Дані відсутні</string>
    <string name="ended_orders_label">Завершені</string>
    <string name="personal_orders_label">Персональні</string>
    <string name="potential_orders_label">Потенціальні</string>
    <string name="update_btn_label">Оновити</string>
    <string name="orders_label">Заявки</string>
    <string name="title_activity_login">Вхід</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="email_input_label">Email</string>
    <string name="something_email_com">something@email.com</string>
    <string name="login_text">Увійти</string>
    <string name="login_title">Вхід</string>
    <string name="password_input_label">Пароль</string>
    <string name="never_updated">Ніколи не оновлювалось</string>
    <string name="not_logged_in">Ви не увійшли у профіль</string>
    <string name="active_orders_button_template">Активні (0)</string>
    <string name="ended_orders_button_template">Завершені (0)</string>
    <string name="personal_orders_button_template">Персональні (0)</string>
    <string name="potential_orders_button_template">Потенційні (0)</string>
    <string name="logout">Вийти</string>
</resources>
