<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mkrooted.bukiclient.MainActivity"
    android:background="#eeeeee">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/headImage1"
        android:layout_alignParentEnd="true"
        android:src="@drawable/head1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:cropToPadding="false"
        android:scaleType="centerCrop"
        android:saveEnabled="false"
        android:layout_marginBottom="10dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/headImage1">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.2"
            android:id="@+id/name_layout">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/not_logged_in"
                android:id="@+id/name_view"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.7"
                android:textSize="25sp"
                android:layout_marginLeft="16dp" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/avatar"
                android:src="@drawable/no_avatar"
                android:layout_weight="0.3"
                android:scaleType="fitEnd"
                android:layout_marginRight="@dimen/activity_horizontal_margin" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/orders_label"
            android:id="@+id/orders_label"
            android:layout_weight="0.1"
            android:gravity="bottom|center_horizontal"
            android:textSize="30sp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/active_orders_button_template"
                android:id="@+id/active_orders_button"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="5dp"
                android:textSize="20sp"
                android:background="@drawable/active_orders_button" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1" >

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/personal_orders_button_template"
                android:id="@+id/personal_orders_button"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="5dp"
                android:textSize="20sp"
                android:background="@drawable/personal_orders_button" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1" >

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/potential_orders_button_template"
                android:id="@+id/potential_orders_button"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="5dp"
                android:textSize="20sp"
                android:background="@drawable/potential_orders_button" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1" >

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/ended_orders_button_template"
                android:id="@+id/ended_orders_button"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="5dp"
                android:textSize="20sp"
                android:background="@drawable/ended_orders_button" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/never_updated"
            android:id="@+id/last_update_date"
            android:layout_gravity="right"
            android:layout_weight="0.15"
            android:gravity="bottom|center_horizontal" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginBottom="10dp">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/logout"
                android:id="@+id/logout_button"
                android:layout_weight="0.3"
                android:background="@drawable/login_button"
                android:textSize="19sp" />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/update_btn_label"
                android:id="@+id/update_btn"
                android:layout_weight="0.7"
                android:textSize="20sp"
                android:background="@drawable/login_button"
                android:layout_marginLeft="5dp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
